[gd_scene load_steps=28 format=3 uid="uid://0olo4xrydpou"]

[ext_resource type="Script" path="res://Scenes/Equipment/MortarPestle/MortarPestle.gd" id="1_ejbgi"]
[ext_resource type="Texture2D" uid="uid://bif5c32wbtosm" path="res://Assets/Sprites/mortarpestle.png" id="2_iet1f"]
[ext_resource type="Texture2D" uid="uid://3ba750fxv8qd" path="res://Assets/Sprites/star.png" id="3_c8jrn"]
[ext_resource type="PackedScene" uid="uid://kp38v1bep0br" path="res://Components/Clickable/ClickableComponent.tscn" id="4_0chji"]
[ext_resource type="PackedScene" uid="uid://bxqdllqah4k3u" path="res://Components/DropOff/DropOffComponent.tscn" id="5_4m87w"]
[ext_resource type="PackedScene" uid="uid://bmqjfcq75klgl" path="res://Components/Pickup/PickUpComponent.tscn" id="7_8i5m0"]
[ext_resource type="Resource" uid="uid://camfg8jp47103" path="res://Resources/Ingredients/Raw/BatWings.tres" id="8_jl63r"]
[ext_resource type="PackedScene" uid="uid://ccfrus2lxbs5j" path="res://Components/TakesIngredients/TakesIngredientsComponent.tscn" id="8_r0p78"]
[ext_resource type="Resource" uid="uid://cuew4t7n5rpk1" path="res://Resources/Ingredients/Raw/CockatriceFeather.tres" id="9_eks1k"]
[ext_resource type="PackedScene" uid="uid://ct1u42fmqi8je" path="res://Components/Item/ItemComponent.tscn" id="9_p0cwi"]
[ext_resource type="Resource" uid="uid://byt0w0v3varip" path="res://Resources/Ingredients/Raw/DragonBlood.tres" id="10_q8mmq"]
[ext_resource type="Resource" uid="uid://cxsh56hnd636k" path="res://Resources/Potions/TrashPotion.tres" id="11_abup7"]
[ext_resource type="Resource" uid="uid://bc2kd7qk6e57v" path="res://Resources/Ingredients/Raw/MandrakeRoot.tres" id="11_d4w01"]
[ext_resource type="Resource" uid="uid://ki0igx0pi4c6" path="res://Resources/Ingredients/Raw/Nightshade.tres" id="12_87vdd"]
[ext_resource type="Resource" uid="uid://gah1qqswn5jd" path="res://Resources/RecipeTables/MortarPestleRecipeTable.tres" id="12_ot13r"]
[ext_resource type="PackedScene" uid="uid://dq3e1l424jqhp" path="res://Components/Audio/AudioComponent.tscn" id="13_f0l6a"]
[ext_resource type="Resource" uid="uid://drq72ptn3p5qi" path="res://Resources/Ingredients/Raw/Salt.tres" id="13_k27ao"]
[ext_resource type="Resource" uid="uid://csovk45m2l8k4" path="res://Resources/Ingredients/Raw/Wolfsbane.tres" id="14_1c0ya"]
[ext_resource type="AudioStream" uid="uid://dsum4d5tuqt83" path="res://Assets/Audio/MortarPestle/mortar_pestle_0.wav" id="14_675sy"]
[ext_resource type="AudioStream" uid="uid://dao21wwrifsf0" path="res://Assets/Audio/MortarPestle/mortar_pestle_1.wav" id="15_8nja4"]
[ext_resource type="AudioStream" uid="uid://b7ksnj3t84xii" path="res://Assets/Audio/MortarPestle/mortar_pestle_2.wav" id="16_oix85"]
[ext_resource type="AudioStream" uid="uid://dwovbjlo8vonc" path="res://Assets/Audio/MortarPestle/mortar_pestle_3.wav" id="17_4y8bc"]
[ext_resource type="AudioStream" uid="uid://k6l48vqv12ke" path="res://Assets/Audio/MortarPestle/mortar_pestle_4.wav" id="18_jmasx"]
[ext_resource type="PackedScene" uid="uid://t70hmk4ewtkh" path="res://Components/RecipeTable/RecipeTableComponent.tscn" id="19_q1i6i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0hwj"]
size = Vector2(57.25, 9.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aq12l"]
size = Vector2(64, 61)

[sub_resource type="CircleShape2D" id="CircleShape2D_08k7l"]
radius = 26.0192

[node name="MortarPestle" type="StaticBody2D" groups=["Invisibility"]]
script = ExtResource("1_ejbgi")
cook_timer = 3

[node name="PestleSprite" type="Sprite2D" parent="."]
position = Vector2(-0.500004, 0.500002)
scale = Vector2(0.243164, 0.194336)
texture = ExtResource("2_iet1f")

[node name="HarvestableSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -49)
scale = Vector2(0.0522461, 0.0424805)
texture = ExtResource("3_c8jrn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 7.9375)
shape = SubResource("RectangleShape2D_k0hwj")

[node name="ClickableComponent" parent="." instance=ExtResource("4_0chji")]
tooltip_text = "Mortar & Pestle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableComponent"]
shape = SubResource("RectangleShape2D_aq12l")

[node name="DropOffComponent" parent="." node_paths=PackedStringArray("takes_ingredients_component") instance=ExtResource("5_4m87w")]
position = Vector2(0, 41.42)
takes_ingredients_component = NodePath("../TakesIngredientsComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropOffComponent"]
shape = SubResource("CircleShape2D_08k7l")

[node name="PickUpComponent" parent="." node_paths=PackedStringArray("item_component") instance=ExtResource("7_8i5m0")]
position = Vector2(0, 41.42)
item_component = NodePath("../ItemComponent")
is_swappable = false
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpComponent"]
shape = SubResource("CircleShape2D_08k7l")

[node name="TakesIngredientsComponent" parent="." instance=ExtResource("8_r0p78")]
takes_ingredients = Array[Resource("res://Scripts/IngredientResource.gd")]([ExtResource("8_jl63r"), ExtResource("9_eks1k"), ExtResource("10_q8mmq"), ExtResource("11_d4w01"), ExtResource("12_87vdd"), ExtResource("13_k27ao"), ExtResource("14_1c0ya")])

[node name="ItemComponent" parent="." instance=ExtResource("9_p0cwi")]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RecipeTableComponent" parent="." instance=ExtResource("19_q1i6i")]
default = ExtResource("11_abup7")
recipe_table = ExtResource("12_ot13r")

[node name="AudioComponent" parent="." instance=ExtResource("13_f0l6a")]
audio_clips = Array[AudioStream]([ExtResource("14_675sy"), ExtResource("15_8nja4"), ExtResource("16_oix85"), ExtResource("17_4y8bc"), ExtResource("18_jmasx")])

[connection signal="drop_off_ingredient_event" from="DropOffComponent" to="." method="_on_drop_off_component_drop_off_ingredient_event"]
[connection signal="picked_up_event" from="PickUpComponent" to="." method="_on_pick_up_component_picked_up_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
